# libocpp

./: .clang-tidy  .gitignore  CMakeLists.txt  DEBUG_NOTES.md  Dockerfile.chargepoint  Dockerfile.charger  OCPP-1-6.md  OCPP-2-0-1.md  README.md  dependencies.cmake  dependencies.yaml  docker-compose.yml  run-docker-tls.sh  run-docker.sh
.github/: CODEOWNERS  (+1 more)
.trunk/: trunk.yaml
config/v201/: CMakeLists.txt  config.json  config_full.json  init.sql  init_core.sql  init_device_model.sql  init_device_model_db.py
config/v201/component_config/custom/: Connector_2_1.json  EVSE_1.json  EVSE_2.json
config/v201/component_config/standardized/: AlignedDataCtrlr.json  AuthCacheCtrlr.json  ClockCtrlr.json  DisplayMessageCtrlr.json  InternalCtrlr.json  SecurityCtrlr.json  SmartChargingCtrlr.json
config/v201/component_schemas/: TxCtrlr.json
config/v201/component_schemas/custom/: Connector_1_1.json  Connector_2_1.json  EVSE_1.json  EVSE_2.json
config/v201/component_schemas/standardized/: AlignedDataCtrlr.json  AuthCacheCtrlr.json  AuthCtrlr.json  ChargingStation.json  ConnectedEV.json  DisplayMessageCtrlr.json  EVSE.json  InternalCtrlr.json  LocalAuthListCtrlr.json  MonitoringCtrlr.json  OCPPCommCtrlr.json  ReservationCtrlr.json  SampledDataCtrlr.json  SecurityCtrlr.json  TariffCostCtrlr.json  TxCtrlr.json
config/v201/core_migrations/: 1_up-initial.sql  2_down-transactions_db.sql  2_up-auth_cache_management.sql  2_up-test2.sql  2_up-transactions_db.sql  3_down-message-queue.sql  3_up-transactions_db.sql  4_up-message-queue.sql  5_up-charging_profiles_db.sql  6_down-charging_limit_source_column.sql  6_up-charging_limit_source_column.sql
config/v201/device_model_migrations/: 1_up-initial.sql  3_down-variable_ocpp-version.sql  3_up-variable_ocpp-version.sql
tests/: CMakeLists.txt  comparators.cpp  comparators.hpp  database_handler_mock.hpp  database_tests.cpp  doctest.cpp  evse_security_mock.hpp  generate_test_certs.sh  libocpp-unittests.cmake  ocsp_updater_tests.cpp  pki_handler_tests.cpp  v201_utils_tests.cpp
tests/config/v201/: pytest.ini  test_init_device_model_db.py
tests/config/v201/resources/: config.json
tests/config/v201/resources/component_config/standardized/: UnitTestCtrlr.json
tests/config/v201/resources/component_schemas/standardized/: UnitTestCtrlr.json
tests/config/v201/resources_changed/: config.json
tests/config/v201/resources_changed/component_config/custom/: Connector_1_1.json  EVSE_2.json
tests/config/v201/resources_wrong/component_config_wrong_ocpp_protocol_type/standardized/: UnitTestCtrlr.json
tests/lib/ocpp/common/: CMakeLists.txt  database_testing_utils.hpp  evse_security_mock.hpp  test_database_migration_files.cpp  test_database_migration_files.h  test_database_migration_files.hpp  test_database_schema_updater.cpp  test_message_queue.cpp  utils_tests.cpp
tests/lib/ocpp/v16/: .gitignore  CMakeLists.txt  database_handler_mock.hpp  database_stub.hpp  database_tests.cpp  internal.cpp  internal.hpp  profile_tests.cpp  profile_tests.md  profile_testsA.cpp  profile_testsB.cpp  profile_testsC.cpp  profile_tests_common.cpp  test_composite_schedule.cpp  test_config_validation.cpp  test_configuration.cpp  test_database_migration_files.cpp  test_message_queue.cpp  test_smart_charging_handler.cpp
tests/lib/ocpp/v16/json/: TxDefaultProfile_01.json  TxProfile_02.json
tests/lib/ocpp/v2/: device_model_test_helper.cpp  device_model_test_helper.hpp  smart_charging_test_utils.cpp  smart_charging_test_utils.hpp  test_charge_point.cpp  test_component_state_manager.cpp  test_composite_schedule.cpp  test_device_model.cpp  test_init_device_model_db.cpp  test_profile.cpp
tests/lib/ocpp/v2/functional_blocks/: CMakeLists.txt  test_authorization.cpp  test_availability.cpp  test_data_transfer.cpp  test_reservation.cpp  test_security.cpp  test_smart_charging.cpp
tests/lib/ocpp/v2/mocks/: connectivity_manager_mock.hpp  database_handler_fake.hpp  database_handler_mock.hpp  evse_manager_fake.hpp  evse_manager_mock.hpp  evse_mock.hpp
tests/lib/ocpp/v201/: CMakeLists.txt  device_model_test_helper.cpp  device_model_test_helper.hpp  smart_charging_test_utils.cpp  smart_charging_test_utils.hpp  test_charge_point.cpp  test_component_state_manager.cpp  test_composite_schedule.cpp  test_connectivity_manager.cpp  test_database_handler.cpp  test_database_migration_files.cpp  test_device_model.cpp  test_device_model_storage_sqlite.cpp  test_init_device_model_db.cpp  test_notify_report_requests_splitter.cpp  test_profile.cpp  test_smart_charging_handler.cpp  unittest_device_model.db  unittest_device_model_missing_required.db  utils_tests.cpp
tests/lib/ocpp/v201/functional_blocks/: CMakeLists.txt  test_authorization.cpp  test_data_transfer.cpp  test_reservation.cpp  test_security.cpp  test_smart_charging.cpp
tests/lib/ocpp/v201/json/: README.md
tests/lib/ocpp/v201/json/OCCT_TC_K_41_CS/: README.md  everest-sil_TC_K_41_CS2024-08-21T12_24_30.733616.log.txt
tests/lib/ocpp/v201/json/baseline/: README.md
tests/lib/ocpp/v201/json/case_one/: README.md
tests/lib/ocpp/v201/json/grid/: README.md
tests/lib/ocpp/v201/json/layered/: README.md
tests/lib/ocpp/v201/json/layered_recurring/: README.md
tests/lib/ocpp/v201/json/max/: README.md
tests/lib/ocpp/v201/json/relative/: README.md
tests/lib/ocpp/v201/json/sil_TC_K_40/: profile1.json  profile2.json
tests/lib/ocpp/v201/json/singles/: README.md
tests/lib/ocpp/v201/mocks/: database_handler_fake.hpp  database_handler_mock.hpp  device_model_interface_mock.hpp  device_model_mock.hpp  device_model_storage_mock.hpp  evse_manager_fake.hpp  evse_mock.hpp  evse_security_mock.hpp  message_dispatcher_mock.hpp  message_queue_mock.hpp  smart_charging_handler_mock.hpp  smart_charging_mock.hpp
tests/lib/ocpp/v201/stubs/everest/: timer.hpp
tests/lib/ocpp/v201/stubs/smart_charging/: smart_charging_handler_stub.cpp
tests/lib/ocpp/v21/: CMakeLists.txt  test_composite_schedule.cpp
tests/lib/ocpp/v21/functional_blocks/: test_smart_charging.cpp
tests/resources/: unittest_device_model.db  unittest_device_model_missing_required.db
(+835 files in other folders)
